# Language-Style-Analyser

./: .gitignore  README.md  TEST_CASES.md  app.py  pyproject.toml
core/: __init__.py  batch_processor.py  ngram_analyser.py  pos_analyser.py  similarity_scorer.py  style_interpretor.py  tokeniser.py  vocabulary.py
pages/: 01_📊_home.py  02_📁_batch_analysis.py  03_📈_comparison_tool.py
utilities/: __init__.py  comparison_generator.py  export_formatter.py  text_cleaner.py
